# Cubify

./: .gitignore  README.md  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.e2e.json  tsconfig.json
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
components/: PercentileRing.tsx  Providers.tsx  (+1 more)
tools/wca-rank-totals/: README.md  pyproject.toml
tools/wca-rank-totals/data/: country-totals.json
tools/wca-rank-totals/data/rank-lists/222/: average.json
tools/wca-rank-totals/data/rank-lists/333bf/: single.json
tools/wca-rank-totals/data/rank-lists/333mbf/: single.json
tools/wca-rank-totals/data/rank-lists/333mbo/: single.json
tools/wca-rank-totals/data/rank-lists/333oh/: average.json
tools/wca-rank-totals/data/rank-lists/444/: single.json
tools/wca-rank-totals/data/rank-lists/444bf/: single.json
tools/wca-rank-totals/data/rank-lists/666/: single.json
tools/wca-rank-totals/data/rank-lists/clock/: average.json
tools/wca-rank-totals/data/rank-lists/pyram/: average.json
tools/wca-rank-totals/data/rank-lists/skewb/: average.json
tools/wca-rank-totals/data/rank-lists/sq1/: single.json
tools/wca-rank-totals/src/wca_rank_totals/: __init__.py  acquire.py  cli.py  document.py  metadata.py  model.py  parse.py  population.py  rank_list.py
tools/wca-rank-totals/tests/: test_acquire.py  test_cli.py  test_document.py  test_metadata.py  test_model.py  test_parse.py  test_population.py  test_rank_list.py
tools/wca-rank-totals/tests/fixtures/: countries.tsv  persons.tsv  ranks_average.tsv  ranks_single.tsv
(+109 files in other folders)
