[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "wca-rank-totals"
version = "0.1.0"
description = "Exact WCA ranked-competitor totals from the official results export"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
